--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   money2: ^2.0.3
   syncfusion_flutter_charts: ^19.1.57+1
   syncfusion_flutter_core: ^19.1.57+1
+  grouped_list: ^4.0.0
 
 dev_dependencies:
   flutter_test:
