--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,14 @@ dependencies:
   # introduction_screen: ^2.1.0
   flutter_svg: ^0.21.0+1
   google_fonts: ^2.0.0
-  scroll_to_index: ^2.0.0
+  # scroll_to_index: ^2.0.0
   provider: ^5.0.0
   intl: ^0.17.0
-  money2: ^2.0.3
+  # money2: ^2.0.3
   syncfusion_flutter_charts: ^19.1.57+1
   syncfusion_flutter_core: ^19.1.57+1
   grouped_list: ^4.0.0
+  scrollable_positioned_list: ^0.1.10
 
 dev_dependencies:
   flutter_test:
